--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, viewport-fit=cover" />
     
     <title>Taylor & Mitch</title>
-    <!link rel="stylesheet" href="{{ '/site.css' | url }}" />
+    <link rel="stylesheet" href="./output.css" />
   </head>
   <body>
-
+    <h1 class="text-3xl font-bold underline">
+      Hello world!
+    </h1>
   </body>
 </html>
