--- a/src/index.html
+++ b/src/index.html
@@ -164,8 +164,8 @@
                     <div class="">
                         <h3 class="font-bold font-heading text-4xl text-brand-red">Friday, April 10</h3>
                         <p class="mt-3 font-bold text-brand-red">The big day | 5 - 10 PM</p>
-                        <p>The Fox Theatre</p>
-                        <p>660 Peachtree St NE</p>
+                        <p class="text-brand-red">The Fox Theatre</p>
+                        <p class="text-brand-red">660 Peachtree St NE</p>
                     </div>
                      <div>
                         <h3 class="font-bold font-heading text-4xl text-brand-red">Saturday, April 11</h3>
