--- a/404.html
+++ b/404.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
   <html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="refresh" content="0; url=/">
-      <title>Page Not Found - Redirecting</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=/">
+    <title>Page Not Found - Redirecting</title>
   </head>
-  <body />
+  <body>
+    <h1>Page Not Found</h1>
+    <p>Redirecting to the homepage...</p>
+  </body>
 </html>
