'we're getting married' -> 'forever-ever'

--- a/src/index.html
+++ b/src/index.html
@@ -89,19 +89,6 @@
 
     <main>
         <section class="py-16 md:py-24 px-6">
-            <!-- <div class="relative max-w-2xl mx-auto text-center columns-1 md:columns-3">
-                
-                <div class="text-sm tracking-widest -translate-y-2">
-                    <p>WE'RE GETTING<br>MARRIED</p>
-                </div>
-
-
-                <div class="top-0 text-sm tracking-widest -translate-y-2">
-                    <p>4.10.26<br>ATLANTA, GA</p>
-                </div>
-
-            </div> -->
-
           <div class="flex flex-col items-center gap-3 max-w-3xl mx-auto md:flex-row md:w-full md:justify-between">
             <div class="top-0 text-center text-md tracking-widest -translate-y-2">
               <p>WE'RE GETTING<br>MARRIED</p>
@@ -121,28 +108,28 @@
         <section class="py-12 md:py-20 border-t border-b border-brand-red overflow-x-hidden">
             <div class="relative flex">
                 <div class="animate-marquee-wave whitespace-nowrap flex items-center -rotate-2">
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
                 </div>
                 <div class="absolute top-0 animate-marquee-wave whitespace-nowrap flex items-center -rotate-2">
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
-                    <span class="mx-4 text-xl font-heading">We're getting married ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
+                    <span class="mx-4 text-xl font-heading">Forever-ever ❤️</span>
                 </div>
             </div>
         </section>
