Adjust background + red theme colors

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
             theme: {
                 extend: {
                     colors: {
-                        'brand-bg': '#F8E0D9',
-                        'brand-red': '#D44A4A',
+                        'brand-bg': '#F7E6CA',
+                        'brand-red': '#831923',
                     },
                     fontFamily: {
                         'heading': ['Cormorant Garamond', 'serif'],
