Add registry URL

--- a/src/index.html
+++ b/src/index.html
@@ -60,10 +60,8 @@
         <div class="text-center space-y-8">
             <a href="#" class="block text-white text-3xl font-heading tracking-custom">Travel & Stay</a>
             <a href="#" class="block text-white text-3xl font-heading tracking-custom">Things to Do</a>
-            <a href="#" class="block text-white text-3xl font-heading tracking-custom">Registry</a>
+            <a href="https://www.honeyfund.com/site/taylor-and-mitch" class="block text-white text-3xl font-heading tracking-custom">Registry</a>
         </div>
-        
-        <!-- <a href="#" class="absolute bottom-10 px-8 py-3 text-white border border-white font-body hover:bg-white hover:text-black">RSVP</a> -->
     </nav>
 
 
@@ -80,8 +78,7 @@
             <nav class="hidden md:flex items-center space-x-8 text-sm tracking-widest">
                 <a href="#" class="hover:opacity-70">Travel & Stay</a>
                 <a href="#" class="hover:opacity-70">Things to Do</a>
-                <a href="#" class="hover:opacity-70">Registry</a>
-                <!-- <a href="#" class="px-5 py-2 border border-brand-red hover:bg-brand-red hover:text-white">RSVP</a> -->
+                <a href="https://www.honeyfund.com/site/taylor-and-mitch" class="hover:opacity-70">Registry</a>
             </nav>
         </div>
     </header>
