--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
         </label>
         
         <div class="text-center space-y-8">
+            <a href="https://nsglkiyw.formester.com/f/LPefp5mVn" class="hover:opacity-70">RSVP</a>
             <a href="#" class="block text-white text-3xl font-heading tracking-custom">Travel & Stay</a>
             <a href="#" class="block text-white text-3xl font-heading tracking-custom">Things to Do</a>
             <a href="https://www.honeyfund.com/site/taylor-and-mitch" class="block text-white text-3xl font-heading tracking-custom">Registry</a>
@@ -76,6 +77,7 @@
             </label>
 
             <nav class="hidden md:flex items-center space-x-8 text-sm tracking-widest">
+                <a href="https://nsglkiyw.formester.com/f/LPefp5mVn" class="hover:opacity-70">RSVP</a>
                 <a href="#" class="hover:opacity-70">Travel & Stay</a>
                 <a href="#" class="hover:opacity-70">Things to Do</a>
                 <a href="https://www.honeyfund.com/site/taylor-and-mitch" class="hover:opacity-70">Registry</a>
