--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,14 @@
                 </p>
             </div>
         </section>
+
+        <!-- 
+        <section class="py-16 md:py-24 px-6">
+          <div>
+            {% include "itinerary.md" %}
+          </div>
+        </section>
+         -->
         
         <section class="py-16 md:py-24 px-6">
             <div class="text-center md:text-left max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16">
