--- a/src/index.html
+++ b/src/index.html
@@ -143,9 +143,9 @@
         
         
         <section class="py-16 md:py-24 px-6">
-            <div class="text-left md:text-left max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16">
-                <div class="text-center md:text-left">
-                    <h2 class="text-6xl md:text-7xl font-heading tracking-custom">The weekend</h2>
+            <div class="text-left md:text-left max-w-5xl mx-auto gap-8 md:gap-16">
+                <div class="text-center">
+                    <h2 class="text-5xl md:text-7xl font-heading tracking-custom">The weekend</h2>
                 </div>
                 <div class="font-body text-gray-800 space-y-8">
                   {% set file = "itinerary.md" %}
@@ -157,9 +157,9 @@
         <hr class="border-t border-brand-red max-w-5xl mx-auto">
 
         <section class="py-16 md:py-24 px-6">
-            <div class="text-left md:text-left max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16">
-                <div class="text-center md:text-left">
-                    <h2 class="text-6xl md:text-7xl font-heading tracking-custom">Where to stay</h2>
+            <div class="text-left md:text-left max-w-5xl mx-auto gap-8 md:gap-16">
+                <div class="text-center">
+                    <h2 class="text-5xl md:text-7xl font-heading tracking-custom">Where to stay</h2>
                 </div>
                 <div class="font-body text-gray-800 space-y-8">
                   {% set file = "hotels.md" %}
@@ -171,9 +171,9 @@
         <hr class="border-t border-brand-red max-w-5xl mx-auto">
 
         <section class="py-16 md:py-24 px-6">
-            <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16">
-                <div class="text-center md:text-left">
-                    <h2 class="text-6xl md:text-7xl font-heading tracking-custom">Things to do</h2>
+            <div class="text-left md:text-left max-w-5xl mx-auto gap-8 md:gap-16">
+                <div class="text-center">
+                    <h2 class="text-5xl md:text-7xl font-heading tracking-custom">Things to do</h2>
                 </div>
                 <div class="font-body text-gray-800 space-y-8">
                   {% set file = "things-todo.md" %}
