Add smooth scrolling to navigation links
- Added unique IDs to 'Travel & Stay' and 'Things to Do' sections
- Updated desktop and mobile navigation links to use anchor references
- Added CSS scroll-behavior: smooth for smooth scrolling animation
- No JavaScript required - pure HTML/CSS solution

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        html { scroll-behavior: smooth; }
         #menu-toggle { display: none; }
     </style>
     <script>
@@ -59,8 +60,8 @@
         
         <div class="text-center space-y-8">
             <a href="https://nsglkiyw.formester.com/f/LPefp5mVn" class="hover:opacity-70">RSVP</a>
-            <a href="#" class="block text-white text-3xl font-heading tracking-custom">Travel & Stay</a>
-            <a href="#" class="block text-white text-3xl font-heading tracking-custom">Things to Do</a>
+            <a href="#travel-stay" class="block text-white text-3xl font-heading tracking-custom">Travel & Stay</a>
+            <a href="#things-todo" class="block text-white text-3xl font-heading tracking-custom">Things to Do</a>
             <a href="https://www.honeyfund.com/site/taylor-and-mitch" class="block text-white text-3xl font-heading tracking-custom">Registry</a>
         </div>
     </nav>
@@ -78,8 +79,8 @@
 
             <nav class="hidden md:flex items-center space-x-8 text-sm tracking-widest">
                 <a href="https://nsglkiyw.formester.com/f/LPefp5mVn" class="hover:opacity-70">RSVP</a>
-                <a href="#" class="hover:opacity-70">Travel & Stay</a>
-                <a href="#" class="hover:opacity-70">Things to Do</a>
+                <a href="#travel-stay" class="hover:opacity-70">Travel & Stay</a>
+                <a href="#things-todo" class="hover:opacity-70">Things to Do</a>
                 <a href="https://www.honeyfund.com/site/taylor-and-mitch" class="hover:opacity-70">Registry</a>
             </nav>
         </div>
@@ -156,7 +157,7 @@
 
         <hr class="border-t border-brand-red max-w-5xl mx-auto">
 
-        <section class="py-16 md:py-24 px-6">
+        <section id="travel-stay" class="py-16 md:py-24 px-6">
             <div class="text-left md:text-left max-w-5xl mx-auto gap-8 md:gap-16">
                 <div class="text-center">
                     <h2 class="text-5xl md:text-7xl font-heading tracking-custom">Where to stay</h2>
@@ -170,7 +171,7 @@
 
         <hr class="border-t border-brand-red max-w-5xl mx-auto">
 
-        <section class="py-16 md:py-24 px-6">
+        <section id="things-todo" class="py-16 md:py-24 px-6">
             <div class="text-left md:text-left max-w-5xl mx-auto gap-8 md:gap-16">
                 <div class="text-center">
                     <h2 class="text-5xl md:text-7xl font-heading tracking-custom">Things to do</h2>
